2013-12-20  Andy Buckley  <andy.buckley@cern.ch>

	* Adding comment and empty line support to PDF index parsing, and
	updating pdfsets.index with missing PDFs and assigning LHAPDF IDs
	to ABM12, new MRST QED and MSTW sets, new NNPDF23 QED sets, and
	the first ATLAS PDF sets.

2013-12-19  Andy Buckley  <andy.buckley@cern.ch>

	* Changing the YAML functions to operate in a mangled namespace if
	using the LHAPDF bundled version (a bit of sed and preprocessor:
	not too evil!)

	* Merging in the first version of the lhapdf manager script by David Hall. Thanks!

	* Further tweaking of the grid numerics parsing, using a variation
	on Gavin Salam's FastIStringStream class.

2013-12-17  Andy Buckley  <andy.buckley@cern.ch>

	* Replacing use of the tokenizing istringstream in GridPDF.cc with
	basic ifstream seetg and tellg calls for initialisation speed
	improvement: thanks to David Grellscheid for the suggestion and
	implementation help!

2013-12-14  Andy Buckley  <andy.buckley@cern.ch>

	* Adding a --disable-lhaglue-cxx configure switch and machinery to
	use it (disables building of LHAPDF5 C++ compatibility routines.)

	* Adding requested xfxphoton and getqmass_ functions and various Fortran wrapper fixes.

2013-12-13  Andy Buckley  <andy.buckley@cern.ch>

	* Adding a typedef of auto_ptr as unique_ptr if not in C++0x or later.

	* Adding -DNDEBUG to the CXXFLAGS if not in debug mode.

	* Use C++11 compilation if available.

2013-12-11  Andy Buckley  <andy.buckley@cern.ch>

	* Removing checking for and linking against Boost filesystem and
	system libs!

	* Replacing use of boost::filesystem::path and functions with
	home-made versions.

	* Adding use of a built-in yaml-cpp (0.3.0) if --with-yaml-cpp (or
	similar configure flags) are not specified.

	* Using intermediate static libs to build the source files that
	depend on YAML and Boost path stuff separately from the others.

2013-11-07  Andy Buckley  <andy.buckley@cern.ch>
